--- a/index.html
+++ b/index.html
@@ -1,229 +1,287 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="description" content="Mithun Multi-Tool App: a free, web-based toolkit with calculators, converters, number tools, quizzes, AI solver, capital finder and more.">
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Mithun Multi-Tool App</title>
+
+  <!-- META DESCRIPTION -->
+  <meta name="description" content="Mithun Multi-Tool App: a free, web-based toolkit with calculators, converters, number tools, quizzes and more — all in one place for daily use.">
 
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
       background: linear-gradient(135deg, #7f7fff, #ff7f7f);
-      color: white;
-    }
-    .tabs {
+      min-height: 100vh;
       display: flex;
-      background: #000000aa;
-      padding: 10px;
-      gap: 10px;
       justify-content: center;
+      align-items: flex-start;
+      padding: 20px;
     }
-    .tab-btn {
-      background: #222;
-      padding: 12px 18px;
-      border-radius: 8px;
-      cursor: pointer;
-      color: white;
-      border: 2px solid cyan;
-      font-weight: bold;
+
+    .container {
+      width: 95%;
+      max-width: 800px;
+      background: white;
+      padding: 20px;
+      border-radius: 20px;
+      box-shadow: 0px 4px 10px rgba(0,0,0,0.3);
     }
-    .tab-btn:hover {
-      background: cyan;
-      color: black;
+
+    h2 {
+      text-align: center;
+      color: #333;
+      margin-bottom: 15px;
     }
-    .tab-content { display: none; padding: 20px; }
-    .active { display: block; }
-    input, select, button {
-      padding: 10px;
-      margin: 5px;
-      border-radius: 8px;
-      border: none;
-    }
-    button { cursor: pointer; font-weight: bold; }
-    .result {
-      margin-top: 15px;
-      font-size: 20px;
-      font-weight: bold;
-    }
-    .tool-box {
-      background: rgba(255,255,255,0.9);
-      color: black;
+
+    select, input, textarea {
+      width: 100%;
       padding: 15px;
       border-radius: 10px;
-      margin-bottom: 20px;
+      border: 1px solid #888;
+      margin-top: 10px;
+      font-size: 16px;
     }
-    .flag { width: 140px; border-radius: 10px; margin-top: 10px; }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      margin-top: 15px;
+      border: none;
+      border-radius: 10px;
+      background: #4f46e5;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #4338ca;
+    }
+
+    .tool-section {
+      display: none;
+      margin-top: 15px;
+    }
+
+    #capitalResult, #ai_result {
+      margin-top: 20px;
+      padding: 15px;
+      background: #f5f5f5;
+      border-radius: 10px;
+      font-size: 17px;
+      white-space: pre-wrap;
+    }
+
+    .flag {
+      width: 130px;
+      margin-top: 10px;
+      border-radius: 8px;
+    }
   </style>
 </head>
 
 <body>
 
-<!-- TABS -->
-<div class="tabs">
-  <div class="tab-btn" onclick="openTab('home')">Home</div>
-  <div class="tab-btn" onclick="openTab('capital')">Capital Finder</div>
-  <div class="tab-btn" onclick="openTab('solution')">Solution (AI)</div>
-  <div class="tab-btn" onclick="openTab('operations')">Operations</div>
-  <div class="tab-btn" onclick="openTab('lifetools')">Life Tools</div>
-  <div class="tab-btn" onclick="openTab('quiz')">Quiz</div>
-</div>
+  <div class="container">
+    <h2>Mithun Multi-Tool App</h2>
 
-<!-- HOME -->
-<div id="home" class="tab-content active">
-  <h1 style="text-align:center;">Welcome Mithun 👋</h1>
-  <p style="text-align:center;">Your all-in-one Multi-Tool App</p>
-</div>
+    <!-- TOOL SELECTOR -->
+    <select id="toolSelect">
+      <option value="">Select Tool</option>
+      <option value="capital">Country → Capital Finder</option>
+      <option value="ai">AI Solution (Math / Word Problems)</option>
+      <option value="calc">Basic Calculator</option>
+    </select>
 
-<!-- CAPITAL FINDER NEW -->
-<div id="capital" class="tab-content">
-  <h2>🌍 Country → Capital Finder</h2>
-  <input id="countryInput" placeholder="Enter country (example: India)">
-  <button onclick="findCountry()">Search</button>
-  <div id="capitalResult" class="result"></div>
-</div>
+    <!-- CAPITAL FINDER -->
+    <div id="capitalTool" class="tool-section">
+      <input type="text" id="countryInput" placeholder="Enter country (e.g., India)">
+      <button onclick="findCountry()">Search Capital</button>
+      <div id="capitalResult"></div>
+    </div>
 
-<!-- AI SOLVER TAB -->
-<div id="solution" class="tab-content">
-  <h2>🧠 AI Word Problem Solver</h2>
-  <input id="ai_question" placeholder="Enter your math word problem">
-  <button onclick="solveAI()">Solve</button>
-  <div id="ai_result" class="result"></div>
-</div>
+    <!-- AI SOLVER -->
+    <div id="aiTool" class="tool-section">
+      <textarea id="ai_question" rows="4" placeholder="Type your question here... (example: A train travels 60km...)"></textarea>
+      <button onclick="solveAI()">Solve with AI</button>
+      <div id="ai_result"></div>
+    </div>
 
-<!-- ========= OLD TOOLS (UNTOUCHED) ========= -->
-<!-- OPERATIONS, LIFE TOOLS, QUIZ remain SAME from your code -->
+    <!-- BASIC CALCULATOR -->
+    <div id="calcTool" class="tool-section">
+      <input type="number" id="n1" placeholder="Enter number 1">
+      <input type="number" id="n2" placeholder="Enter number 2">
+      <button onclick="calcAdd()">Add</button>
+      <button onclick="calcSub()">Subtract</button>
+      <button onclick="calcMul()">Multiply</button>
+      <button onclick="calcDiv()">Divide</button>
+      <div id="calcResult"></div>
+    </div>
 
-<script>
+  </div>
 
-/* ---------------- TAB FUNCTION ---------------- */
-function openTab(tabName) {
-  document.querySelectorAll(".tab-content").forEach(t => t.classList.remove("active"));
-  document.getElementById(tabName).classList.add("active");
-}
 
-/* =======================================================
-   NEW CAPITAL FINDER (RESTCOUNTRIES + FUZZY MATCH)
-========================================================= */
+  <script>
+    // TOOL SWITCHER
+    document.getElementById("toolSelect").addEventListener("change", function () {
+      document.querySelectorAll(".tool-section").forEach(sec => sec.style.display = "none");
 
-function similarity(a, b) {
-  if (!a || !b) return 0;
-  a = a.toLowerCase();
-  b = b.toLowerCase();
-  const matrix = Array.from({ length: a.length + 1 }, () =>
-    new Array(b.length + 1).fill(0)
-  );
-  for (let i = 0; i <= a.length; i++) matrix[i][0] = i;
-  for (let j = 0; j <= b.length; j++) matrix[0][j] = j;
+      if (this.value === "capital") document.getElementById("capitalTool").style.display = "block";
+      if (this.value === "ai") document.getElementById("aiTool").style.display = "block";
+      if (this.value === "calc") document.getElementById("calcTool").style.display = "block";
+    });
 
-  for (let i = 1; i <= a.length; i++) {
-    for (let j = 1; j <= b.length; j++) {
-      const cost = a[i - 1] === b[j - 1] ? 0 : 1;
-      matrix[i][j] = Math.min(
-        matrix[i - 1][j] + 1,
-        matrix[i][j - 1] + 1,
-        matrix[i - 1][j - 1] + cost
+    // SIMPLE LEVENSHTEIN SIMILARITY
+    function similarity(a, b) {
+      if (!a || !b) return 0;
+      a = a.toLowerCase();
+      b = b.toLowerCase();
+
+      const matrix = Array.from({ length: a.length + 1 }, () =>
+        new Array(b.length + 1).fill(0)
       );
-    }
-  }
 
-  const maxLen = Math.max(a.length, b.length);
-  return 1 - matrix[a.length][b.length] / maxLen;
-}
+      for (let i = 0; i <= a.length; i++) matrix[i][0] = i;
+      for (let j = 0; j <= b.length; j++) matrix[0][j] = j;
 
-async function findCountry() {
-  const input = document.getElementById("countryInput").value.trim();
-  const out = document.getElementById("capitalResult");
+      for (let i = 1; i <= a.length; i++) {
+        for (let j = 1; j <= b.length; j++) {
+          const cost = a[i - 1] === b[j - 1] ? 0 : 1;
 
-  if (!input) {
-    out.innerHTML = "❌ Please enter a country name.";
-    return;
-  }
-
-  out.innerHTML = "Searching...";
-
-  try {
-    const res = await fetch("https://restcountries.com/v3.1/all");
-    const data = await res.json();
-
-    let bestMatch = null;
-    let bestScore = 0;
-
-    data.forEach(country => {
-      const name = country.name.common;
-      const score = similarity(input, name);
-      if (score > bestScore) {
-        bestScore = score;
-        bestMatch = country;
+          matrix[i][j] = Math.min(
+            matrix[i - 1][j] + 1,
+            matrix[i][j - 1] + 1,
+            matrix[i - 1][j - 1] + cost
+          );
+        }
       }
-    });
 
-    if (bestScore < 0.45) {
-      out.innerHTML = "❌ No matching country found.";
-      return;
+      const maxLen = Math.max(a.length, b.length);
+      return 1 - matrix[a.length][b.length] / maxLen;
     }
 
-    const info = bestMatch;
-    const name = info.name.common;
-    const capital = info.capital ? info.capital[0] : "No capital";
-    const region = info.region;
-    const population = info.population.toLocaleString();
-    const flag = info.flags.png;
+    // CAPITAL FINDER
+    async function findCountry() {
+      const input = document.getElementById("countryInput").value.trim();
+      const out = document.getElementById("capitalResult");
 
-    const desc = `${name} is a country in ${region} with a population of about ${population}.`;
+      if (!input) {
+        out.innerHTML = "❌ Please enter a country name.";
+        return;
+      }
 
-    out.innerHTML = `
-      <h3>${name}</h3>
-      <b>Capital:</b> ${capital}<br><br>
-      <b>Description:</b> ${desc}<br>
-      <img class="flag" src="${flag}">
-      <br><small>Match Score: ${(bestScore*100).toFixed(0)}%</small>
-    `;
-  } catch {
-    out.innerHTML = "❌ Could not load data.";
-  }
-}
+      out.innerHTML = "Searching...";
 
-/* =======================================================
-   SOLUTION TAB — AI WORD PROBLEM SOLVER (GROQ API)
-========================================================= */
+      try {
+        const res = await fetch("https://restcountries.com/v3.1/all?fields=name,capital,region,population,flags");
+        const data = await res.json();
 
-async function solveAI() {
-  const q = document.getElementById("ai_question").value.trim();
-  const out = document.getElementById("ai_result");
+        let bestMatch = null;
+        let bestScore = 0;
 
-  if (!q) { out.innerHTML = "Please enter a question."; return; }
+        data.forEach(country => {
+          const score = similarity(input, country.name.common);
+          if (score > bestScore) {
+            bestScore = score;
+            bestMatch = country;
+          }
+        });
 
-  out.innerHTML = "Thinking...";
+        if (!bestMatch) {
+          out.innerHTML = "❌ No country found.";
+          return;
+        }
 
-  try {
-    const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer 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"
-      },
-      body: JSON.stringify({
-        model: "llama3-8b-8192",
-        messages: [
-          { role: "user", content: "Solve this math word problem clearly: " + q }
-        ]
-      })
-    });
+        const name = bestMatch.name.common;
+        const capital = bestMatch.capital ? bestMatch.capital[0] : "No capital";
+        const region = bestMatch.region;
+        const population = bestMatch.population.toLocaleString();
+        const flag = bestMatch.flags.png;
 
-    const data = await response.json();
-    out.innerHTML = data.choices[0].message.content;
-  } catch (err) {
-    out.innerHTML = "❌ Error solving problem.";
-  }
-}
+        out.innerHTML = `
+          <h3>${name}</h3>
+          <b>Capital:</b> ${capital}<br>
+          <b>Region:</b> ${region}<br>
+          <b>Population:</b> ${population}<br>
+          <img class="flag" src="${flag}">
+        `;
+      } catch (e) {
+        out.innerHTML = "❌ Could not load country data.";
+      }
+    }
 
-/* ========= OLD FUNCTIONS (OPS, LIFE TOOLS, QUIZ) ========= */
-/* KEEPING YOUR ORIGINAL CODE EXACTLY THE SAME */
+    // AI SOLVER
+    async function solveAI() {
+      const q = document.getElementById("ai_question").value.trim();
+      const out = document.getElementById("ai_result");
 
-</script>
+      if (!q) {
+        out.innerHTML = "❌ Enter a question.";
+        return;
+      }
+
+      out.innerHTML = "Thinking...";
+
+      try {
+        const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            "Authorization": "Bearer YOUR_GROQ_API_KEY_HERE"
+          },
+          body: JSON.stringify({
+            model: "llama3-8b-8192",
+            messages: [{ role: "user", content: q }]
+          })
+        });
+
+        const data = await response.json();
+
+        if (!data.choices) {
+          out.innerHTML = "❌ Error: " + JSON.stringify(data);
+          return;
+        }
+
+        out.innerHTML = data.choices[0].message.content;
+
+      } catch (e) {
+        out.innerHTML = "❌ Could not reach AI server.";
+      }
+    }
+
+    // CALCULATOR FUNCTIONS
+    function calcAdd() {
+      const a = Number(document.getElementById("n1").value);
+      const b = Number(document.getElementById("n2").value);
+      document.getElementById("calcResult").innerHTML = "Result: " + (a + b);
+    }
+
+    function calcSub() {
+      const a = Number(document.getElementById("n1").value);
+      const b = Number(document.getElementById("n2").value);
+      document.getElementById("calcResult").innerHTML = "Result: " + (a - b);
+    }
+
+    function calcMul() {
+      const a = Number(document.getElementById("n1").value);
+      const b = Number(document.getElementById("n2").value);
+      document.getElementById("calcResult").innerHTML = "Result: " + (a * b);
+    }
+
+    function calcDiv() {
+      const a = Number(document.getElementById("n1").value);
+      const b = Number(document.getElementById("n2").value);
+      if (b === 0) {
+        document.getElementById("calcResult").innerHTML = "❌ Cannot divide by zero.";
+        return;
+      }
+      document.getElementById("calcResult").innerHTML = "Result: " + (a / b);
+    }
+
+  </script>
 
 </body>
 </html>
