--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@
           method: "POST",
           headers: {
             "Content-Type": "application/json",
-            "Authorization": "Bearer YOUR_GROQ_API_KEY_HERE"
+            "Authorization": "Bearer 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
+"
           },
           body: JSON.stringify({
             model: "llama3-8b-8192",
