--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ async function solveAI() {
     const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
       method: "POST",
       headers: {
-        "Authorization": "Bearer YOUR_GROQ_API_KEY_HERE",
+        "Authorization": "Bearer  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",
         "Content-Type": "application/json"
       },
       body: JSON.stringify({
