--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-<meta charset='UTF-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1.0'>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Mithun Multi-Tool App</title>
 
+<!-- External Libraries -->
 <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.6/dist/JsBarcode.all.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/algebrite@1.3.1/dist/algebrite.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 
 <style>
 :root {
@@ -42,12 +44,11 @@ body {
   cursor:pointer;
   font-weight:bold;
   border:2px solid var(--accent);
-  transition: all 0.3s;
+  transition: 0.3s;
 }
 .tab-btn:hover, .tab-btn.active-tab {
   background:var(--accent);
   color:white;
-  box-shadow: 0 0 10px var(--accent);
 }
 .tab-content { display:none; padding:20px; }
 .active { display:block; }
@@ -73,9 +74,8 @@ button {
   font-weight:bold;
   cursor:pointer;
   border:none;
-  transition: .2s;
 }
-button:hover { opacity:0.9; background-color:#007bb2; }
+button:hover { background:#0b7ad1; }
 
 .result {
   margin-top:10px;
@@ -90,22 +90,105 @@ button:hover { opacity:0.9; background-color:#007bb2; }
 </style>
 
 <script>
+/* -------- Tab Controller -------- */
 function openTab(t, element) {
   document.querySelectorAll('.tab-content').forEach(x => x.classList.remove('active'));
   document.querySelectorAll('.tab-btn').forEach(x => x.classList.remove('active-tab'));
   document.getElementById(t).classList.add('active');
   element.classList.add('active-tab');
 }
-
-window.onload = function() {
+window.onload = () => {
   const homeButton = document.querySelector(`.tab-btn[onclick*="home"]`);
   openTab("home", homeButton);
 };
 
-/* -------- core functions here (same as your code, no changes) -------- */
+/* -------- SMART TOOLS FUNCTIONS -------- */
+
+function makeQR() {
+  const text = document.getElementById("qr_text").value;
+  QRCode.toDataURL(text, function (err, url) {
+    document.getElementById("qr_box").innerHTML =
+      `<img src="${url}" style="width:150px;">`;
+  });
+}
+
+function makeBarcode() {
+  let v = document.getElementById("barcode_text").value;
+  JsBarcode("#barcode_svg", v, {format: "CODE128"});
+  document.getElementById("barcode_box").style.display = "block";
+}
+
+async function getIP() {
+  let r = await fetch("https://api.ipify.org?format=json");
+  let d = await r.json();
+  document.getElementById("ip_box").innerText = "Your IP: " + d.ip;
+}
+
+function getDeviceInfo() {
+  let info =
+    "User Agent: " + navigator.userAgent + "\n" +
+    "Platform: " + navigator.platform + "\n" +
+    "Language: " + navigator.language;
+  document.getElementById("device_box").innerText = info;
+}
+
+function checkPwd() {
+  let p = document.getElementById("pwd_input").value;
+  let s = "Weak";
+  if (p.length >= 8 && /[0-9]/.test(p) && /[A-Z]/.test(p)) s = "Strong";
+  else if (p.length >= 6) s = "Medium";
+  document.getElementById("pwd_box").innerText = "Strength: " + s;
+}
+
+function pickName() {
+  let list = document.getElementById("name_list").value.split(",");
+  let pick = list[Math.floor(Math.random() * list.length)].trim();
+  document.getElementById("pick_out").innerText = "Selected: " + pick;
+}
+
+let timer;
+function startTimer() {
+  let sec = Number(document.getElementById("timer_in").value);
+  let out = document.getElementById("timer_out");
+  out.innerText = sec + "s remaining";
+  timer = setInterval(() => {
+    sec--;
+    out.innerText = sec + "s remaining";
+    if (sec <= 0) {
+      clearInterval(timer);
+      out.innerText = "Time's up!";
+    }
+  }, 1000);
+}
+
+let sw = 0, swInt;
+function swStart() { swInt = setInterval(() => { sw += 0.1; document.getElementById("sw_out").innerText = sw.toFixed(1)+"s"; }, 100); }
+function swStop() { clearInterval(swInt); }
+function swReset() { sw = 0; document.getElementById("sw_out").innerText = "0.0s"; }
+
+function saveNote() { localStorage.setItem("mynote", document.getElementById("note_in").value); }
+function loadNote() { document.getElementById("note_out").innerText = localStorage.getItem("mynote") || "No notes found."; }
+
+/* -------- Text Tools -------- */
+function upperText(){ document.getElementById("text_out").value = document.getElementById("text_in").value.toUpperCase(); }
+function lowerText(){ document.getElementById("text_out").value = document.getElementById("text_in").value.toLowerCase(); }
+function removeSpaces(){ document.getElementById("text_out").value = document.getElementById("text_in").value.replace(/\s+/g,""); }
+
+/* -------- Algebra Solver -------- */
+function solveEquation() {
+  let q = document.getElementById("eq_input").value;
+  try {
+    let ans = Algebrite.run(q);
+    document.getElementById("eq_out").innerText = ans;
+  } catch {
+    document.getElementById("eq_out").innerText = "Invalid expression";
+  }
+}
+</script>
 </head>
 <body>
 
+<!-- TABS -->
 <div class='tabs'>
   <div class='tab-btn' onclick="openTab('home', this)">Home</div>
   <div class='tab-btn' onclick="openTab('smarttools', this)">Smart Tools</div>
@@ -116,23 +199,26 @@ window.onload = function() {
   <div class='tab-btn' onclick="openTab('quiz', this)">Quiz</div>
 </div>
 
-<div id='home' class='tab-content'>
+<!-- HOME -->
+<div id="home" class="tab-content">
   <h1>Welcome Mithun 👋</h1>
   <div class="tool-box">
     <h3>Text Tools</h3>
-    <textarea id="text_in" rows="5" placeholder="Type text here..."></textarea>
+    <textarea id="text_in" rows="5" placeholder="Type text..."></textarea>
     <button onclick="upperText()">UPPERCASE</button>
     <button onclick="lowerText()">lowercase</button>
     <button onclick="removeSpaces()">Remove Spaces</button>
     <textarea id="text_out" class="result" rows="5" readonly></textarea>
   </div>
 </div>
+
+<!-- SMART TOOLS -->
 <div id="smarttools" class="tab-content">
-  <h2>Smart Tools Collection</h2>
+  <h2>Smart Tools</h2>
 
   <div class="tool-box">
     <h3>QR Code Maker</h3>
-    <input id="qr_text" placeholder="Enter text or URL">
+    <input id="qr_text" placeholder="Enter text">
     <button onclick="makeQR()">Generate</button>
     <div id="qr_box" class="result" style="text-align:center;"></div>
   </div>
@@ -148,18 +234,18 @@ window.onload = function() {
 
   <div class="tool-box">
     <h3>Your IP Finder</h3>
-    <button onclick="getIP()">Show My IP</button>
+    <button onclick="getIP()">Show IP</button>
     <div id="ip_box" class="result"></div>
   </div>
 
   <div class="tool-box">
     <h3>Device Info</h3>
-    <button onclick="getDeviceInfo()">Show Device Info</button>
+    <button onclick="getDeviceInfo()">Show Device</button>
     <div id="device_box" class="result"></div>
   </div>
 
   <div class="tool-box">
-    <h3>Password Strength Checker</h3>
+    <h3>Password Strength</h3>
     <input id="pwd_input" type="password">
     <button onclick="checkPwd()">Check</button>
     <div id="pwd_box" class="result"></div>
@@ -167,7 +253,7 @@ window.onload = function() {
 
   <div class="tool-box">
     <h3>Random Name Picker</h3>
-    <textarea id="name_list" placeholder="Names separated by commas"></textarea>
+    <textarea id="name_list" placeholder="Names separated by comma"></textarea>
     <button onclick="pickName()">Pick</button>
     <div id="pick_out" class="result"></div>
   </div>
@@ -181,75 +267,79 @@ window.onload = function() {
 
   <div class="tool-box">
     <h3>Stopwatch</h3>
-    <div id="sw_out" class="result">0.00s</div>
+    <div id="sw_out" class="result">0.0s</div>
     <button onclick="swStart()">Start</button>
     <button onclick="swStop()">Stop</button>
     <button onclick="swReset()">Reset</button>
   </div>
 
   <div class="tool-box">
-    <h3>Notes App</h3>
+    <h3>Notes</h3>
     <textarea id="note_in" rows="4"></textarea>
     <button onclick="saveNote()">Save</button>
     <button onclick="loadNote()">Load</button>
     <div id="note_out" class="result"></div>
   </div>
-
 </div>
+
+<!-- CAPITAL FINDER -->
 <div id="capital" class="tab-content">
   <h2>Capital Finder</h2>
   <div class="tool-box">
-    <input id="country_in" placeholder="Enter country">
-    <button onclick="findCapital()">Find Capital</button>
-    <div id="capital_out" class="result"></div>
+    <input id="cap_in" placeholder="Enter country">
+    <button onclick="capFind()">Find</button>
+    <div id="cap_out" class="result"></div>
   </div>
 </div>
+
+<script>
+function capFind(){
+  let c = document.getElementById("cap_in").value.toLowerCase();
+  const data = {
+    india: "New Delhi",
+    usa: "Washington D.C",
+    japan: "Tokyo",
+    australia:"Canberra",
+    canada:"Ottawa"
+  };
+  document.getElementById("cap_out").innerText =
+    data[c] ? "Capital: " + data[c] : "Not Found";
+}
+</script>
+
+<!-- ALGEBRA SOLVER -->
 <div id="solution" class="tab-content">
   <h2>Algebra Solver</h2>
   <div class="tool-box">
-    <input id="alg_in" placeholder="Equation (ex: 2x+3=15)">
-    <button onclick="solveAlg()">Solve</button>
-    <div id="alg_out" class="result"></div>
+    <input id="eq_input" placeholder="Example: solve(x^2-4)">
+    <button onclick="solveEquation()">Solve</button>
+    <div id="eq_out" class="result"></div>
   </div>
 </div>
+
+<!-- OPERATIONS -->
 <div id="operations" class="tab-content">
   <h2>Math Operations</h2>
-
   <div class="tool-box">
-    <h3>Basic Calculator</h3>
-    <input id="n1" type="number" placeholder="Number 1">
-    <input id="n2" type="number" placeholder="Number 2">
-    <button onclick="calc('+')">+</button>
-    <button onclick="calc('-')">-</button>
-    <button onclick="calc('*')">*</button>
-    <button onclick="calc('/')">/</button>
-    <div id="calc_out" class="result"></div>
+    <input id="n1" type="number" placeholder="Num1">
+    <input id="n2" type="number" placeholder="Num2">
+    <button onclick="document.getElementById('op_out').innerText = Number(n1.value)+Number(n2.value)">Add</button>
+    <button onclick="document.getElementById('op_out').innerText = Number(n1.value)-Number(n2.value)">Subtract</button>
+    <button onclick="document.getElementById('op_out').innerText = Number(n1.value)*Number(n2.value)">Multiply</button>
+    <button onclick="document.getElementById('op_out').innerText = (Number(n2.value)==0?'Error':Number(n1.value)/Number(n2.value))">Divide</button>
+    <div id="op_out" class="result"></div>
   </div>
-
-  <div class="tool-box">
-    <h3>LCM / HCF</h3>
-    <input id="lcm_in" placeholder="Numbers separated by commas (ex 4,6,8)">
-    <button onclick="calcLCM()">LCM</button>
-    <button onclick="calcHCF()">HCF</button>
-    <div id="lcm_out" class="result"></div>
-  </div>
-
-  <div class="tool-box">
-    <h3>Prime Checker</h3>
-    <input id="prime_in" type="number" placeholder="Enter number">
-    <button onclick="checkPrime()">Check</button>
-    <div id="prime_out" class="result"></div>
-  </div>
-
 </div>
+
+<!-- LIFE TOOLS -->
 <div id="lifetools" class="tab-content">
   <h2>Life Tools</h2>
 
   <div class="tool-box">
     <h3>BMI Calculator</h3>
-    <input id="bmi_w" type="number" placeholder="Weight (kg)">
-    <input id="bmi_h" type="number" placeholder="Height (m)">
-    <button onclick="calcBMI()">Calculate</button>
+    <input id="w" placeholder="Weight kg">
+    <input id="h" placeholder="Height m">
+    <button onclick="document.getElementById('bmi_out').innerText = (w.value/(h.value*h.value)).toFixed(2)">Calculate</button>
     <div id="bmi_out" class="result"></div>
   </div>
 
@@ -259,222 +349,35 @@ window.onload = function() {
     <button onclick="calcAge()">Calculate</button>
     <div id="age_out" class="result"></div>
   </div>
-
-  <div class="tool-box">
-    <h3>Currency Converter (INR ⇄ USD)</h3>
-    <input id="cur_in" type="number" placeholder="Enter amount">
-    <select id="cur_type">
-      <option value="inr">INR → USD</option>
-      <option value="usd">USD → INR</option>
-    </select>
-    <button onclick="convertCurrency()">Convert</button>
-    <div id="cur_out" class="result"></div>
-  </div>
-
-  <div class="tool-box">
-    <h3>EMI Calculator</h3>
-    <input id="emi_p" type="number" placeholder="Loan Amount">
-    <input id="emi_r" type="number" placeholder="Interest (%)">
-    <input id="emi_t" type="number" placeholder="Months">
-    <button onclick="calcEMI()">Calculate</button>
-    <div id="emi_out" class="result"></div>
-  </div>
-
-  <div class="tool-box">
-    <h3>Password Generator</h3>
-    <button onclick="makePassword()">Generate Strong Password</button>
-    <div id="pass_out" class="result"></div>
-  </div>
-
 </div>
-<div id="quiz" class="tab-content">
-  <h2>Math Quiz</h2>
 
-  <div class="tool-box">
-    <h3>Random Question</h3>
-    <button onclick="newQuestion()">Generate</button>
-    <div id="q_out" class="result"></div>
-
-    <input id="q_ans" placeholder="Your answer">
-    <button onclick="checkAns()">Submit</button>
-
-    <div id="q_res" class="result"></div>
-  </div>
-</div>
 <script>
-/* ---------- TEXT TOOLS ---------- */
-function upperText(){ text_out.value = text_in.value.toUpperCase(); }
-function lowerText(){ text_out.value = text_in.value.toLowerCase(); }
-function removeSpaces(){ text_out.value = text_in.value.replace(/\s+/g," ").trim(); }
-
-/* ---------- QR ---------- */
-function makeQR(){
-  qr_box.innerHTML = "";
-  let img = document.createElement("img");
-  img.src = "https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=" + encodeURIComponent(qr_text.value);
-  qr_box.appendChild(img);
-}
-
-/* ---------- BARCODE ---------- */
-function makeBarcode(){
-  JsBarcode("#barcode_svg", barcode_text.value);
-  barcode_box.style.display = "block";
-}
-
-/* ---------- IP FINDER ---------- */
-async function getIP(){
-  let r = await fetch("https://api.ipify.org/?format=json");
-  let d = await r.json();
-  ip_box.innerText = "Your IP: " + d.ip;
-}
-
-/* ---------- DEVICE INFO ---------- */
-function getDeviceInfo(){
-  let d = navigator;
-  device_box.innerText =
-    "Browser: " + d.userAgent + "\n" +
-    "Language: " + d.language + "\n" +
-    "Online: " + d.onLine;
-}
-
-/* ---------- PASSWORD STRENGTH ---------- */
-function checkPwd(){
-  let p = pwd_input.value;
-  let s = 0;
-  if(p.length >= 8) s++;
-  if(/[A-Z]/.test(p)) s++;
-  if(/[0-9]/.test(p)) s++;
-  if(/[^A-Za-z0-9]/.test(p)) s++;
-
-  let text = ["Very Weak","Weak","Medium","Strong","Very Strong"][s];
-  pwd_box.innerText = "Strength: " + text;
-}
-
-/* ---------- RANDOM NAME PICKER ---------- */
-function pickName(){
-  let arr = name_list.value.split(",").map(x=>x.trim()).filter(x=>x);
-  if(arr.length===0) return pick_out.innerText="Enter names!";
-  pick_out.innerText = "Winner: " + arr[Math.floor(Math.random()*arr.length)];
-}
-
-/* ---------- TIMER ---------- */
-function startTimer(){
-  let t = Number(timer_in.value);
-  timer_out.innerText = "Time: " + t;
-  let x = setInterval(()=>{
-    t--;
-    timer_out.innerText = "Time: " + t;
-    if(t<=0) clearInterval(x);
-  },1000);
-}
-
-/* ---------- STOPWATCH ---------- */
-let sw=0, swInt;
-function swStart(){ swInt = setInterval(()=>{ sw+=0.1; sw_out.innerText = sw.toFixed(2)+"s"; },100); }
-function swStop(){ clearInterval(swInt); }
-function swReset(){ sw=0; sw_out.innerText = "0.00s"; }
-
-/* ---------- NOTES ---------- */
-function saveNote(){ localStorage.setItem("note", note_in.value); }
-function loadNote(){ note_out.innerText = localStorage.getItem("note") || "No saved notes."; }
-
-/* ---------- CAPITAL FINDER ---------- */
-const capitals = {
-  india:"New Delhi", usa:"Washington DC", japan:"Tokyo", france:"Paris",
-  china:"Beijing", russia:"Moscow", uk:"London", germany:"Berlin"
-};
-function findCapital(){
-  let c = country_in.value.toLowerCase().trim();
-  capital_out.innerText = capitals[c] || "Not found";
-}
-
-/* ---------- ALGEBRA SOLVER ---------- */
-function solveAlg(){
-  try{
-    let r = Algebrite.run("solve(" + alg_in.value + ")");
-    alg_out.innerText = r;
-  }catch(e){ alg_out.innerText = "Invalid equation"; }
-}
-
-/* ---------- BASIC CALCULATOR ---------- */
-function calc(op){
-  let a = Number(n1.value), b = Number(n2.value);
-  calc_out.innerText = eval(a + op + b);
-}
-
-/* ---------- LCM / HCF ---------- */
-function gcd(a,b){ return b?gcd(b,a%b):a; }
-function lcm(a,b){ return a*b/gcd(a,b); }
-
-function calcLCM(){
-  let arr = lcm_in.value.split(",").map(x=>Number(x.trim()));
-  let ans = arr.reduce((a,b)=>lcm(a,b));
-  lcm_out.innerText = ans;
-}
-function calcHCF(){
-  let arr = lcm_in.value.split(",").map(x=>Number(x.trim()));
-  let ans = arr.reduce((a,b)=>gcd(a,b));
-  lcm_out.innerText = ans;
-}
-
-/* ---------- PRIME CHECK ---------- */
-function checkPrime(){
-  let n = Number(prime_in.value);
-  if(n<2) return prime_out.innerText="Not Prime";
-  for(let i=2;i<=Math.sqrt(n);i++) if(n%i===0) return prime_out.innerText="Not Prime";
-  prime_out.innerText="Prime";
-}
-
-/* ---------- BMI ---------- */
-function calcBMI(){
-  let bmi = bmi_w.value / (bmi_h.value**2);
-  bmi_out.innerText = "BMI: " + bmi.toFixed(2);
-}
-
-/* ---------- AGE ---------- */
 function calcAge(){
-  let d = new Date(dob.value);
+  let d = new Date(document.getElementById("dob").value);
   let diff = Date.now() - d.getTime();
   let age = new Date(diff).getUTCFullYear() - 1970;
-  age_out.innerText = "Age: " + age;
+  document.getElementById("age_out").innerText = "Age: " + age;
 }
-
-/* ---------- CURRENCY ---------- */
-function convertCurrency(){
-  let v = Number(cur_in.value);
-  let t = cur_type.value;
-  cur_out.innerText = t=="inr" ? (v/83).toFixed(2)+" USD" : (v*83).toFixed(2)+" INR";
-}
-
-/* ---------- EMI ---------- */
-function calcEMI(){
-  let P = Number(emi_p.value);
-  let r = Number(emi_r.value)/1200;
-  let n = Number(emi_t.value);
-  let emi = P*r*( (1+r)**n ) / ( ((1+r)**n)-1 );
-  emi_out.innerText = "EMI: ₹" + emi.toFixed(2);
-}
-
-/* ---------- PASSWORD GENERATOR ---------- */
-function makePassword(){
-  let chars="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%^&*";
-  let p="";
-  for(let i=0;i<12;i++) p+=chars[Math.floor(Math.random()*chars.length)];
-  pass_out.innerText=p;
-}
-
-/* ---------- QUIZ ---------- */
-let q, a;
-function newQuestion(){
-  let n1=Math.floor(Math.random()*20), n2=Math.floor(Math.random()*20);
-  q = `${n1} + ${n2}`;
-  a = n1+n2;
-  q_out.innerText = "Solve: " + q;
-}
-function checkAns(){
-  q_res.innerText = (Number(q_ans.value)==a) ? "Correct!" : "Wrong!";
-}
-
 </script>
+
+<!-- QUIZ -->
+<div id="quiz" class="tab-content">
+  <h2>Quick Quiz</h2>
+  <div class="tool-box">
+    <p>5 + 7 = ?</p>
+    <input id="q1">
+    <button onclick="checkQuiz()">Check</button>
+    <div id="quiz_out" class="result"></div>
+  </div>
+</div>
+
+<script>
+function checkQuiz(){
+  document.getElementById("quiz_out").innerText =
+    (q1.value == "12") ? "Correct!" : "Wrong!";
+}
+</script>
+
 </body>
 </html>
+ 
